# server-client-project

./: ArgumentStruct.h  BoundedBuffer.cpp  BoundedBuffer.h  CMakeLists.txt  ClientFunctions.cpp  ClientFunctions.h  Date.cpp  Date.h  DateList.cpp  DateList.h  DiseaseList.cpp  DiseaseList.h  HashTable.cpp  HashTable.h  Makefile  MasterWorkerFunctions.cpp  MasterWorkerFunctions.h  PatientList.cpp  PatientList.h  PatientRecord.cpp  PatientRecord.h  README.md  ServerFunctions.cpp  ServerFunctions.h  Tree.cpp  Tree.h  WorkersList.cpp  WorkersList.h  master.cpp  namesList.cpp  namesList.h  queries.txt  whoClient.cpp  whoServer.cpp  worker.cpp
inputFiles/Australia/: 18-10-1955  22-9-1931  3-11-1970
inputFiles/Belgium/: 1-12-1975  14-11-1952  3-4-1971
inputFiles/Brazil/: 16-1-1944  2-4-1929  23-12-1936
inputFiles/Canada/: 16-3-2008  19-5-2003  22-3-1921
inputFiles/China/: 2-10-1940  2-4-1958  25-4-1989
inputFiles/Denmark/: 28-1-1968  3-2-1962  9-2-2016
inputFiles/Egypt/: 19-8-2017  3-12-1996  7-1-1921
inputFiles/England/: 21-4-1982  22-7-2011  3-2-1944
inputFiles/France/: 21-2-2015  30-12-1979  9-6-1923
inputFiles/Germany/: 12-1-1953  15-7-2018  2-6-1973
inputFiles/Greece/: 15-8-1986  2-10-2008  23-10-1965
inputFiles/Italy/: 16-7-1990  26-12-1997  28-2-1959
inputFiles/Japan/: 18-8-2006  27-2-1935  7-2-1946
inputFiles/Portugal/: 21-1-2005  23-6-1994  6-10-1960
inputFiles/Russia/: 13-4-1949  2-2-1953  28-9-1976
inputFiles/Spain/: 16-6-1981  18-4-1936  3-4-1930
inputFiles/Switzerland/: 15-10-1935  17-5-1976  25-2-1982
inputFiles/Turkey/: 19-11-1979  (+2 more)
(+6 files in other folders)
